tests/ui/async-await/issue-70935-complex-spans.no_drop_tracking.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-70935-complex-spans.rs:13:45
   |
LL | fn foo(tx: std::sync::mpsc::Sender<i32>) -> impl Future + Send {
   |                                             ^^^^^^^^^^^^^^^^^^ future created by async block is not `Send`
   |
   = help: the trait `Sync` is not implemented for `Sender<i32>`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-70935-complex-spans.rs:19:12
   |
LL |           baz(|| async{
   |  _____________-
LL | |             foo(tx.clone());
LL | |         }).await;
   | |         -  ^^^^^- the value is later dropped here
   | |         |  |
   | |_________|  await occurs here, with the value maybe used later
   |           has type `[closure@$DIR/issue-70935-complex-spans.rs:17:13: 17:15]` which is not `Send`

error: aborting due to previous error

